--- a/views/flights/allFlights.ejs
+++ b/views/flights/allFlights.ejs
@@ -29,126 +29,12 @@
       }
     </style>
 </css>
-<div id="createModal" class="modal" style="color:black;" >
+    <%- include('../flights/createModal.ejs') %>
+    <%- include('../flights/ordermodal.ejs') %>
 
-    <div class="modal-content" style="width: 500px; background-image: url(https://www.kishrey-teufa.co.il/clients/kishreyteufa/gallery/Website_General/Flights/Plane9_750520.jpg); background-size: cover;" >
-        <form id="create_flight_form" style="font-family: Georgia, 'Times New Roman', Times, serif;">
+    <%- include('../flights/editModal.ejs') %>
 
-            <a class="btn-close" type="button"  aria-label="Close" style="color:white;"> </a></button>
-        <label for="flightNumber" style="text-align: left; background-color: khaki;">Flight Number:</label>
-        <input type="number" id="flightNumber" name="flightNumber" style="width: 200px; background-color: white;"><br>
-        
-        <label for="flightDate" style="text-align: left; background-color: khaki;">Flight Date:</label>
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        <input type="date" id="flightDate" name="flightDate" value="<%= new Date().toISOString().slice(0, 10) %>" required style="width: 200px;background-color: white;"><br>
-
-        <label for="hour" style="text-align: left;  background-color: khaki;">Hour:</label>
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        <input type="time" id="hour" name="hour" required style="width: 200px;background-color: white;"><br>
-
-        <label for="Gate" style="text-align: left;  background-color: khaki;">Gate:</label>
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        <input type="text" id="Gate" name="Gate" required style="width: 200px;background-color: white;"><br>
-          
-        <label for="Destination" style="text-align: left;  background-color: khaki;">Destination:</label>
-        &nbsp;	
-        &nbsp;	
-        <input type="text" id="Destination" name="Destination" required style="width: 200px;background-color: white;"><br>
-  
-        <label for="Origin" style="text-align: left;  background-color: khaki;">Origin:</label>
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        <input type="text" id="Origin" name="Origin" value="Israel" required style="width: 200px;background-color: white;"><br>
-
-        <label for="flightPrice" style="text-align: left; background-color: khaki;">Flight Price:</label>
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        &nbsp;	
-        <input type="number" id="flightPrice" name="flightPrice" required style="width: 200px;background-color: white;"><br>
-
-        <label for="ArrivingDate" style="text-align: left; background-color: khaki;">Arriving Date:</label>
-        &nbsp;	
-        &nbsp;	
-        <input type="date" id="ArrivingDate" name="ArrivingDate" value="<%= new Date().toISOString().slice(0, 10) %>" required style="width: 200px;background-color: white;"><br>
-
-        <label for="NumberOfSeats" style="text-align: left; background-color: khaki;">Number of Seats:</label>
-        <input type="number" id="NumberOfSeats" name="NumberOfSeats" required style="width: 200px;background-color: white;"><br>
-
-        <label for="ArrivingHour" style="text-align: left; background-color: khaki;">Arriving Hour:</label>
-        <input type="time" id="ArrivingHour" name="ArrivingHour" required style="width: 200px;background-color: white;"><br>
-
-        <button type="submit" id="create_flight" class="btn btn-secondary">Create Flight</button>
-        </form>
-    </div>
-</div>
-
-<div id="editModal" class="modal" style="color:black;">
-
-    <div class="modal-content"  style="width: 500px; background-image: url(https://www.kishrey-teufa.co.il/clients/kishreyteufa/gallery/Website_General/Flights/Plane9_750520.jpg); background-size: cover;">
-        <form id="edit_flight_form">
-            <a class="btn-close" type="button"  aria-label="Close" style="color:white;"> </a></button>
-            <label for="flightID" style="text-align: left; background-color: khaki;">Flight ID:</label>
-            <input type="text" id="eflightID" name="flightID" readonly style="width: 200px; background-color: white;"><br>
-
-            <label for="flightNumber" style="text-align: left; background-color: khaki;">Flight Number:</label>
-            <input type="number" id="eflightNumber" name="flightNumber" required minlength="9" maxlength="9" style="width: 200px; background-color: white;"><br>
-
-            <label for="flightDate" style="text-align: left; background-color: khaki;">Flight Date:</label>
-            <input type="date" id="eflightDate" name="flightDate" value="<%= new Date().toISOString().slice(0, 10) %>" required style="width: 200px; background-color: white;"><br>
-
-            <label for="hour" style="text-align: left; background-color: khaki;">Hour:</label>
-            <input type="time" id="ehour" name="hour" required style="width: 200px; background-color: white;"><br>
-
-            <label for="Gate" style="text-align: left; background-color: khaki;">Gate:</label>
-            <input type="text" id="eGate" name="Gate" required style="width: 200px; background-color: white;"><br>
-
-            <label for="Destination" style="text-align: left; background-color: khaki;">Destination:</label>
-            <input type="text" id="eDestination" name="Destination" required style="width: 200px; background-color: white;"><br>
-
-            <label for="Origin" style="text-align: left; background-color: khaki;">Origin:</label>
-            <input type="text" id="eOrigin" name="Origin" value="Israel" required style="width: 200px; background-color: white;"><br>
-
-            <label for="flightPrice" style="text-align: left; background-color: khaki;">Flight Price:</label>
-            <input type="number" id="eflightPrice" name="flightPrice" required style="width: 200px; background-color: white;"><br>
-
-            <label for="ArrivingDate" style="text-align: left; background-color: khaki;">Arriving Date:</label>
-            <input type="date" id="eArrivingDate" name="ArrivingDate" value="<%= new Date().toISOString().slice(0, 10) %>" required style="width: 200px; background-color: white;"><br>
-
-            <label for="NumberOfSeats" style="text-align: left; background-color: khaki;">Number of Seats:</label>
-            <input type="number" id="eNumberOfSeats" name="NumberOfSeats" required style="width: 200px; background-color: white;"><br>
-
-            <label for="ArrivingHour" style="text-align: left; background-color: khaki;">Arriving Hour:</label>
-            <input type="time" id="eArrivingHour" name="ArrivingHour" required style="width: 200px; background-color: white;"><br>
-
-            <button type="submit" id="edit_flight">Update Flight</button>
-        </form>
-    </div>
-</div>
-<%- include('../partials/navBar.ejs') %>
+    <%- include('../partials/navBar.ejs') %>
 <div class="main-content" id="block_center" >
     <label style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:  50px ; color:bisque">
         <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-airplane-engines" viewBox="0 0 16 16">
@@ -195,6 +81,7 @@
                 <td class = "flight-number-of-seats"><%= flight.NumberOfSeats %></td>
                 <td class = "flight-arriving-hour"><%= flight.ArrivingHour %></td>
                 <td>
+                <td><button class="orderFlight" data-flightid="<%= flight._id %>">Order</button>
                     <%if(isAdmin){%>
                         <button class="editFlight" data-flightid="<%= flight._id %>"
                                 data-flightnumber="<%= flight.flightNumber %>"
